# livekit-benchmark

./: .gitignore  README.md  __next.!KGhvbWUp.__PAGE__.txt  __next.!KGhvbWUp.txt  __next._full.txt  __next._tree.txt  index.html  index.txt  plan.md
.github/workflows/: deploy.yml
.zealt/: config.json  tasks.json
404/: index.html
_next/static/chunks/: 01baf0a08a33d646.js  a2772f8ce15e2559.js  a29f5d26167c7968.js  a89a97cb5fd7ee1e.js  turbopack-00119fb7381d17c3.js
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
jobs/2026-05-01__19-17-53/: config.json  result.json
jobs/2026-05-01__19-17-53/agent_with_custom_stt_provider__At3vV7j/: config.json  result.json
jobs/2026-05-01__19-17-53/agent_with_custom_stt_provider__At3vV7j/artifacts/code/: agent.py  pyproject.toml
jobs/2026-05-01__19-17-53/basic_voice_agent_python__B9bMrzT/: config.json  result.json
jobs/2026-05-01__19-17-53/camera_only_token_restriction__UtA8cfX/: config.json  exception.txt  result.json
jobs/2026-05-01__19-17-53/delete_room__bpYpPSo/: config.json  result.json
jobs/2026-05-01__19-17-53/egress_recording_trigger__3ZvWe7L/: config.json  result.json
jobs/2026-05-01__19-17-53/full_stack_video_conference_app__hg2tVjp/: config.json  result.json
jobs/2026-05-01__19-17-53/multimodal_vision_agent__n37t6wP/artifacts/code/: agent.py  pyproject.toml
jobs/2026-05-01__19-17-53/realtime_model_agent__s4cHyxx/artifacts/livekit-realtime-agent/: pyproject.toml
jobs/2026-05-01__19-17-53/realtime_model_agent__s4cHyxx/artifacts/livekit-realtime-agent/src/: agent.py
jobs/2026-05-01__19-17-53/voice_agent_system_prompt_tool__3d82gBc/artifacts/code/: agent.py  pyproject.toml
jobs/2026-05-01__19-17-53/voice_agent_with_tool_call__VTRZfgq/artifacts/code/: pyproject.toml
jobs/2026-05-01__19-17-53/voice_agent_with_tool_call__VTRZfgq/artifacts/code/src/: agent.py
jobs/2026-05-07__11-53-21/: config.json  result.json
jobs/2026-05-07__12-10-26/: config.json  result.json
jobs/2026-05-07__17-23-48/: config.json  result.json
jobs/2026-05-07__17-23-48/agent_with_custom_stt_provider__aUvLnW6/artifacts/code/: DEEPGRAM_SETUP.md  PROJECT_SUMMARY.md  README.md  agent.py  pyproject.toml  test_agent.py
jobs/2026-05-07__17-23-48/voice_agent_system_prompt_tool__wZ95rnT/artifacts/code/: IMPLEMENTATION_SUMMARY.md  README.md  agent.py  pyproject.toml
jobs/2026-05-07__18-52-29/: config.json  result.json
jobs/2026-05-07__18-52-29/basic_voice_agent_python__2SBsvNP/artifacts/livekit-agent/: pyproject.toml
jobs/2026-05-07__18-52-29/basic_voice_agent_python__2SBsvNP/artifacts/livekit-agent/src/: agent.py
jobs/2026-05-07__18-52-29/multimodal_vision_agent__esmfeMg/artifacts/: agent.py  pyproject.toml  trial_id
jobs/2026-05-07__18-52-29/voice_agent_with_tool_call__ZsxkwMF/artifacts/livekit-agent/: agent.py  pyproject.toml
site/scripts/: compute-tasks.ts
site/zealt/: config.json
tasks/: __next._full.txt  __next._tree.txt  __next.tasks.__PAGE__.txt  index.html  index.txt
tasks/agent_with_custom_stt_provider/: instruction.md  task.toml
tasks/basic_voice_agent_python/: instruction.md
tasks/camera_only_token_restriction/: instruction.md
tasks/delete_room/: instruction.md  task.toml
tasks/egress_recording_trigger/: instruction.md
tasks/full_stack_video_conference_app/: instruction.md
tasks/generate_access_token/: instruction.md  task.toml
tasks/hand_raise_dynamic_permissions/: instruction.md
tasks/list_active_rooms/: instruction.md
tasks/list_participants_in_room/: instruction.md
tasks/multi_room_data_broadcast/: instruction.md  task.toml
tasks/multimodal_vision_agent/: instruction.md  task.toml
tasks/mute_published_track/: instruction.md
tasks/participant_permissions_update/: instruction.md
tasks/realtime_model_agent/: instruction.md
tasks/remove_participant/: instruction.md
tasks/room_metadata_update/: instruction.md
tasks/room_service_list_and_kick/: instruction.md
tasks/secure_webhook_validation/: instruction.md
tasks/sip_inbound_trunk_setup/: instruction.md
tasks/subscribe_only_token/: instruction.md
tasks/token_refresh_server/: instruction.md
tasks/token_server_express/: instruction.md  task.toml
tasks/token_with_room_config_agent_dispatch/: instruction.md
tasks/turn_detection_customization/: instruction.md
tasks/vad_tuning_barge_in/: instruction.md
tasks/voice_agent_system_prompt_tool/: instruction.md
tasks/voice_agent_with_tool_call/: instruction.md
tasks/webhook_participant_joined_logger/: instruction.md
tasks/webhook_receiver_express/: instruction.md
(+3789 files in other folders)
