[project]
name = "livekit-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[codecs,turn-detector]",
    "livekit-plugins-openai",
    "livekit-plugins-silero",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/agent.py"]
