[project]
name = "livekit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[codecs,turn-detector]>=1.5.7",
    "livekit-plugins-deepgram>=1.5.7",
    "livekit-plugins-openai>=1.5.7",
    "livekit-plugins-silero>=1.5.7",
    "python-dotenv>=1.2.2",
]
