[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit Multimodal AI Agent with Vision"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[codecs,turn-detector]",
    "livekit-plugins-openai",
    "livekit-plugins-silero",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = []
