[project]
name = "livekit-realtime-agent"
version = "0.1.0"
description = "LiveKit Voice Agent using OpenAI Realtime API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[codecs]",
    "livekit-plugins-openai",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = []
