[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit Voice Agent with Function Tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[codecs,turn-detector]",
    "livekit-plugins-silero",
    "livekit-plugins-openai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
