[project]
name = "livekit-weather-agent"
version = "0.1.0"
description = "LiveKit weather agent"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[codecs,turn-detector]",
    "livekit-plugins-silero",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
