[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit agent with Deepgram STT plugin"
requires-python = ">=3.10"

dependencies = [
    "livekit-agents[codecs,turn-detector]>=0.12.0",
    "livekit-plugins-deepgram>=0.8.0",
    "livekit-plugins-silero>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/livekit_agent"]