[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit voice agent with custom system prompt and function tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "livekit-agents[codecs,turn-detector]",
    "livekit-plugins-silero",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []