[project]
name = "livekit-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[codecs,turn-detector]",
    "livekit-plugins-silero",
    "livekit-plugins-openai",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
